[gd_scene load_steps=11 format=3 uid="uid://biboxqrtc1j3p"]

[ext_resource type="Script" path="res://scripts/enemy2d.gd" id="1_swi1w"]
[ext_resource type="Texture2D" uid="uid://bkcfinr6tc6d1" path="res://assets/sprites/slime_green.png" id="2_31i6g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ofyvb"]
atlas = ExtResource("2_31i6g")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3oht8"]
atlas = ExtResource("2_31i6g")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kgme"]
atlas = ExtResource("2_31i6g")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5u4eb"]
atlas = ExtResource("2_31i6g")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_ou8rq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofyvb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3oht8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kgme")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5u4eb")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_cv6hs"]
radius = 41.0122

[sub_resource type="CircleShape2D" id="CircleShape2D_rb6j8"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ivx7w"]
radius = 11.0

[node name="enemy" type="CharacterBody2D"]
script = ExtResource("1_swi1w")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ou8rq")
animation = &"idle"
frame = 3
frame_progress = 0.450303
offset = Vector2(0, -10)

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_cv6hs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_rb6j8")

[node name="enemy_hbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hbox"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_ivx7w")

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="area_shape_entered" from="enemy_hbox" to="." method="_on_enemy_hbox_area_shape_entered"]
[connection signal="area_shape_exited" from="enemy_hbox" to="." method="_on_enemy_hbox_area_shape_exited"]
